@@ -3,6 +3,7 @@ package com.training.enrollmentservice.service;
 import com.training.enrollmentservice.dto.request.EnrollmentRequest;
 import com.training.enrollmentservice.dto.response.EnrollmentResponse;
 import com.training.enrollmentservice.entity.Enrollment;
+import com.training.enrollmentservice.exception.EnrollmentNotFoundException;
 import com.training.enrollmentservice.mapper.EnrollmentMapper;
 import com.training.enrollmentservice.repository.EnrollmentRepository;
 import org.springframework.stereotype.Service;
@@ -10,7 +11,6 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class EnrollmentService {
@@ -25,6 +25,7 @@ public class EnrollmentService {
 
     public EnrollmentResponse createEnrollment(EnrollmentRequest request) {
         Enrollment enrollment = enrollmentMapper.toEntity(request);
+
         enrollment.setEnrollmentDate(LocalDateTime.now());
         enrollment.setCreatedAt(LocalDateTime.now());
         enrollment.setUpdatedAt(LocalDateTime.now());
@@ -32,13 +33,15 @@ public class EnrollmentService {
 
         Enrollment saved = enrollmentRepository.save(enrollment);
 
-        return enrollmentMapper.toResponse(saved);
+        return enrollmentMapper.toResponse(saved);   // ← возвращаем DTO через маппер
     }
 
     public EnrollmentResponse getEnrollmentById(UUID id) {
         Enrollment enrollment = enrollmentRepository.findById(id)
                 .orElseThrow(() ->
-                        new RuntimeException("Enrollment not found with id: " + id));
+                        new EnrollmentNotFoundException(
+                                "Запись не найдена с id: " + id
+                        ));
 
         return enrollmentMapper.toResponse(enrollment);
     }
@@ -47,13 +50,15 @@ public class EnrollmentService {
         return enrollmentRepository.findAll()
                 .stream()
                 .map(enrollmentMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public EnrollmentResponse updateEnrollment(UUID id, EnrollmentRequest request) {
         Enrollment enrollment = enrollmentRepository.findById(id)
                 .orElseThrow(() ->
-                        new RuntimeException("Enrollment not found with id: " + id));
+                        new EnrollmentNotFoundException(
+                                "Запись не найдена с id: " + id
+                        ));
 
         enrollment.setUserId(request.getUserId());
         enrollment.setCourseId(request.getCourseId());
@@ -67,7 +72,9 @@ public class EnrollmentService {
     public void deleteEnrollment(UUID id) {
         Enrollment enrollment = enrollmentRepository.findById(id)
                 .orElseThrow(() ->
-                        new RuntimeException("Enrollment not found with id: " + id));
+                        new EnrollmentNotFoundException(
+                        "Запись не найдена с id: " + id
+                ));
 
         enrollmentRepository.deleteById(id);
     }
